--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teszt oldal</title>
+    <title>2. óra</title>
 </head>
 
 <body>
+    <h1>Első head</h1>
+    <h2>Második head</h2>
+    <h3>Harmadik head</h3>
 
 </body>
 
