--- a/index.html
+++ b/index.html
@@ -12,7 +12,42 @@
     <h1>Első head</h1>
     <h2>Második head</h2>
     <h3>Harmadik head</h3>
-
+    <p>Szöveg p</p>
+    <p>Szöveg p</p>
+    <p>Szöveg p</p>
+    <p>Szöveg p</p><span>Bárdó</span><span>Bárdó</span><span>Bárdó</span><span>Bárdó</span><span>Bárdó</span>
+    <div>Bárdó div</div>
+    <div>Bárdó div</div>
+    <div>Bárdó div</div>
+    <div>Bárdó div</div>
+    <div>Bárdó div</div>
+    <p>Nem sorszaámozott lista:</p>
+    <ul>
+        <li>Item1</li>
+        <li>Item2</li>
+        <li>Item3</li>
+        <li>Item4</li>
+    </ul>
+    <ol>
+        <li>Item1</li>
+        <li>Item2</li>
+        <li>Item3</li>
+        <li>Item4</li>
+    </ol>
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Név</th>
+                <th>Cím</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Bárdó</td>
+                <td>Siklós</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 
 </html>
