--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2. óra</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>Első head</h1>
+    <h1 style="z-index: -100;">Második head</h1>
     <h2>Második head</h2>
     <h3>Harmadik head</h3>
     <p>Szöveg p</p>
