--- a/index.html
+++ b/index.html
@@ -10,46 +10,88 @@
 </head>
 
 <body>
-    <h1>Első head</h1>
-    <h1 style="z-index: -100;">Második head</h1>
-    <h2>Második head</h2>
-    <h3>Harmadik head</h3>
-    <p>Szöveg p</p>
-    <p>Szöveg p</p>
-    <p>Szöveg p</p>
-    <p>Szöveg p</p><span>Bárdó</span><span>Bárdó</span><span>Bárdó</span><span>Bárdó</span><span>Bárdó</span>
-    <div>Bárdó div</div>
-    <div>Bárdó div</div>
-    <div>Bárdó div</div>
-    <div>Bárdó div</div>
-    <div>Bárdó div</div>
-    <p>Nem sorszaámozott lista:</p>
-    <ul>
-        <li>Item1</li>
-        <li>Item2</li>
-        <li>Item3</li>
-        <li>Item4</li>
-    </ul>
-    <ol>
-        <li>Item1</li>
-        <li>Item2</li>
-        <li>Item3</li>
-        <li>Item4</li>
-    </ol>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Név</th>
-                <th>Cím</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Bárdó</td>
-                <td>Siklós</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="container">
+        <div class="item">
+            <div class="sorszam">1</div>
+            <myheader class="belso" style="order:1">Első head</myheader>
+        </div>
+        <div class="item">
+            <div class="sorszam">2</div>
+            <h1 style="z-index: -100;">Második head</h1>
+        </div>
+        <div class="item">
+            <div class="sorszam">3</div>
+            <h2>Második head</h2>
+        </div>
+        <div class="item">
+            <div class="sorszam">4</div>
+            <h3>Harmadik head</h3>
+        </div>
+        <div class="item">
+            <div class="sorszam">5</div>
+            <div class="parag" style="order:2">
+                <p>Szöveg p</p>
+                <p class="kiemelt">Szöveg p</p>
+                <p>Szöveg p</p>
+                <p>Szöveg p</p>
+            </div>
+        </div>
+        <div class="item">
+            <div class="sorszam">6</div>
+            <span>Bárdó</span><span>Bárdó</span><span>Bárdó</span><span>Bárdó</span><span>Bárdó</span>
+        </div>
+        <div class="item">
+            <div class="sorszam">7</div>
+        </div>
+        <div class="item">
+            <div class="sorszam">8</div>
+            <p>Nem sorszaámozott lista:</p>
+            <ul>
+                <li>Item1</li>
+                <li>Item2</li>
+                <li>Item3</li>
+                <li>Item4</li>
+            </ul>
+            <ol>
+                <li>Item1</li>
+                <li>Item2</li>
+                <li>Item3</li>
+                <li>Item4</li>
+            </ol>
+        </div>
+        <div class="item">
+            <div class="sorszam">9</div>
+            <table border="1" style="order:0">
+                <thead>
+                    <tr>
+                        <th>Név</th>
+                        <th>Cím</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Bárdó</td>
+                        <td>Siklós</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="item">
+            <div class="sorszam">10</div>
+        </div>
+
+
+        <div id="container">
+            <div>Bárdó div</div>
+            <div>Bárdó div</div>
+            <div>Bárdó div</div>
+            <div>Bárdó div</div>
+            <div>Bárdó div</div>
+            <p>alsó szöveg</p>
+        </div>
+
+
+    </div>
 </body>
 
 </html>
